--- a/App/package.json
+++ b/App/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "chart.js": "^4.4.9",
         "lucide-vue-next": "^0.508.0",
+        "vue-chartjs": "^5.3.2",
         "ziggy-js": "^2.5.2"
     }
 }
