--- a/App/package.json
+++ b/App/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "chart.js": "^4.4.9",
+        "date-fns": "^4.1.0",
         "lucide-vue-next": "^0.508.0",
         "vue-chartjs": "^5.3.2",
         "ziggy-js": "^2.5.2"
