--- a/App/package.json
+++ b/App/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.5.13"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "chart.js": "^4.4.9",
         "date-fns": "^4.1.0",
         "lucide-vue-next": "^0.508.0",
